--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -5,7 +5,7 @@ jupytext:
     extension: .md
     format_name: myst
     format_version: 0.13
-    jupytext_version: 1.10.3
+    jupytext_version: 1.11.4
 kernelspec:
   display_name: Python 3 (ipykernel)
   language: python
@@ -30,7 +30,14 @@ kernelspec:
     c. What is the result of the following logical operation, `volume>1000` (in inches^3)
 
 ```{code-cell} ipython3
+box = (12.5,11,14,31)
+volume = (box[1]*box[2]*box[0])
+density = box[3]/volume
+logical = volume>1000
 
+print("a. ", volume, "in^3")
+print("b. ", density, "pounds per cubic inch")
+print("c. ", logical)
 ```
 
 2. Use the variables given below, `str1` and `str2`, and check the following 
@@ -46,6 +53,10 @@ kernelspec:
 ```{code-cell} ipython3
 str1 = 'Python'
 str2 = 'python'
+print("a.", str1<str2)
+print("b.", str1==str2)
+print("c.", str1>str2)
+print("d. By removing the first letter or the case.")
 ```
 
 3. The following code has an error, fix the error so that the correct result is returned:
@@ -63,7 +74,13 @@ else:
 ```
 
 ```{code-cell} ipython3
+x=1
+y=20
 
+if x<y and y==20:
+    print('y is 20 and x is less than y')
+else:
+    print('x is not less than y')
 ```
 
 4. There is a commonly-used programming question that asks interviewees
@@ -103,9 +120,19 @@ else:
 18 | Computational Mechanics
 19 | 19
 
-
 ```{code-cell} ipython3
-
+def fizzbuzz(list):
+    for element in list:
+        if element%3 == 0:
+            print("Computational", end=' ')
+        if element%2 == 0:
+            print("Mechanics", end=' ')
+        if element%5 == 0:
+            print("Rocks!", end=' ')
+        if ((element%3 != 0)and(element%2 != 0)and(element%5 != 0)):
+            print(element, end='')
+        print("\n")
+fizzbuzz((0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19))
 ```
 
 ## Problems [Part 2](./02_Working_with_Python.md)
@@ -117,7 +144,11 @@ else:
     b. Use your function to plot sin(x) and cos(x) for x=$0..2\pi$
 
 ```{code-cell} ipython3
-
+import numpy as np
+def sincos(x):
+    sinx = np.sin(x)
+    cosx = np.cos(x)
+    return sinx, cosx
 ```
 
 2. Use a for-loop to create a variable called `A_99`, where every element is the product
@@ -130,7 +161,7 @@ of the two indices from 0 to 9 e.g. A_99[3,2]=6 and A_99[4,4]=16.
     c. Calculate the standard deviation of `A_99`
 
 ```{code-cell} ipython3
-
+A_99 = np.array
 ```
 
 3. Use the two arrays, X and Y, given below to create A_99 using numpy array math rather than a for-loop.
